--- a/html/download.html
+++ b/html/download.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="/css/downloadpage.css">
     <link rel="stylesheet" href="/css/mainpage.css">
     <link rel="icon" href="/media/tab_icon.ico" type="image/x-icon">
+    <link rel="icon" href="/media/tab_icon.ico" type="image/x-icon">
+    
     <title>Quoridor</title>
 </head>
 <body>
@@ -26,9 +28,9 @@
         <div class="download-half">
             <h1>Try it now!</h1>
             <div>
-                <a href="../downloads/Quoridor-Windows.zip" class="main-download" id="Windows" download>Download for Windows</a>
-                <a href="../downloads/Quoridor-MacOS.zip" class="main-download" id="MacOS" download>Download for MacOS</a>
-                <a href="../downloads/Quoridor-Linux.zip" class="main-download" id="Linux" download>Download for Linux</a>
+                <a href="../media/downloads/Quoridor-Windows.zip" class="main-download" id="Windows" download>Download for Windows</a>
+                <a href="../media/downloads/Quoridor-MacOS.zip" class="main-download" id="MacOS" download>Download for MacOS</a>
+                <a href="../media/downloads/Quoridor-Linux.zip" class="main-download" id="Linux" download>Download for Linux</a>
             </div>
             <h2>Thank you!</h2>
             <img src="../media/stars-graphic.png" style="width: 13%;">
