--- a/html/team.html
+++ b/html/team.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="card">
                     <div class="image_cropper">
-                        <img src="../media/Iskren.jpg">
+                        <img src="../media/Iskren.jpg" alt="A photo of Iskren">
                     </div>
                     <h3>
                         Iskren Rusimov<br>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="card">
                     <div class="image_cropper">
-                        <img src="../media/Stefan.png" alt="A photo of Stefan.">
+                        <img src="../media/Stefan.png" alt="A photo of Stefan">
                     </div>
                     <h3>
                         Stefan Slubschi<br>
