Removed most <br>

--- a/html/team.html
+++ b/html/team.html
@@ -29,11 +29,8 @@
                     <div class="image_cropper">
                         <img src="../media/Andras.jpg" alt="A photo of András">
                     </div>
-                    <h3>
-                        András Vándorffy<br>
-                        Role: the leader guy
-                    </h3>
-                    <br>
+                    <h3>András Vándorffy</h3>
+                    <h3>Role: the leader guy</h3>
                     <ul>
                         <li>Pushes everyone to work</li>
                         <li>Makes sure requirements are met</li>
@@ -46,11 +43,8 @@
                     <div class="image_cropper">
                         <img src="../media/Illia.jpg" alt="A photo of Illia">
                     </div>
-                    <h3>
-                        Illia Vladymyrov<br>
-                        Role: the model guy
-                    </h3>
-                    <br>
+                        <h3>Illia Vladymyrov</h3>
+                        <h3>Role: the model guy</h3>
                     <ul>
                         <li>
                             Formats code
@@ -68,11 +62,8 @@
                     <div class="image_cropper">
                         <img src="../media/Iskren.jpg">
                     </div>
-                    <h3>
-                        Iskren Rusimov<br>
-                        Role: the website guy
-                    </h3>
-                    <br>
+                        <h3>Iskren Rusimov</h3>
+                        <h3>Role: the website guy</h3>
                     <ul>
                         <li>Tells you how badly you lost to the AI</li>
                         <li>Set up the Apache server</li>
@@ -84,11 +75,8 @@
                     <div class="image_cropper">
                         <img src="../media/Stefan.png" alt="A photo of Stefan.">
                     </div>
-                    <h3>
-                        Stefan Slubschi<br>
-                        Role: the AI guy
-                    </h3>
-                    <br>
+                        <h3>Stefan Slubschi</h3>
+                        <h3>Role: the AI guy</h3>
                     <ul>
                         <li>Makes sure you badly lose to the AI</li>
                         <li>Algorithms and more algorithms</li>
