--- a/html/deliverables.html
+++ b/html/deliverables.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="flex-deliverables-element">
                         <video width="100%" autoplay muted loop class="flex-deliverables-element">
-                            <source src="../media/GameplayFast.mp4" type="video/mp4">
+                            <source src="../media/GameplayFast1.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                         <p>Example gameplay</p>
