--- a/html/download.html
+++ b/html/download.html
@@ -6,9 +6,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/downloadpage.css">
-    <link rel="stylesheet" href="/css/mainpage.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/downloadpage.css">
+    <link rel="stylesheet" href="../css/mainpage.css">
     <link rel="icon" href="/media/tab_icon.ico" type="image/x-icon">
     <link rel="icon" href="/media/tab_icon.ico" type="image/x-icon">
     
