more relative paths for media

--- a/html/download.html
+++ b/html/download.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/downloadpage.css">
     <link rel="stylesheet" href="../css/mainpage.css">
-    <link rel="icon" href="/media/tab_icon.ico" type="image/x-icon">
-    <link rel="icon" href="/media/tab_icon.ico" type="image/x-icon">
+    <link rel="icon" href="../media/tab_icon.ico" type="image/x-icon">
+    <link rel="icon" href="../media/tab_icon.ico" type="image/x-icon">
     
     <title>Quoridor</title>
 </head>
