--- a/html/project.html
+++ b/html/project.html
@@ -41,7 +41,7 @@
                     </ul>
                 </div>
                 <div class="sprint-image">
-                    <img src="/media/Wireframe.png" alt="The wireframe of the game." onclick="openLightbox(this.src);">
+                    <img src="../media/Wireframe.png" alt="The wireframe of the game." onclick="openLightbox(this.src);">
                 </div>
             </article>
 
@@ -63,7 +63,7 @@
                     </ul>
                 </div>
                 <div class="sprint-image">
-                    <img src="/media/game_beta_version.png" alt="A screenshot of the beta version of the game, illustrating the many ways it was not yet complete" onclick="openLightbox(this.src);">
+                    <img src="../media/game_beta_version.png" alt="A screenshot of the beta version of the game, illustrating the many ways it was not yet complete" onclick="openLightbox(this.src);">
                 </div>
             </article>
 
@@ -86,7 +86,7 @@
                     </ul>
                 </div>
                 <div class="sprint-image">
-                    <img src="/media/game_sprint3.png" alt="A screenshot of the game at the end of sprint 3. It shows a player winning by exploiting a bug in the AI." onclick="openLightbox(this.src);">
+                    <img src="../media/game_sprint3.png" alt="A screenshot of the game at the end of sprint 3. It shows a player winning by exploiting a bug in the AI." onclick="openLightbox(this.src);">
                 </div>
             </article>
 
@@ -102,7 +102,7 @@
                     </ul>
                 </div>
                 <div class="sprint-image">
-                    <img src="/media/game_current_version.png" alt="A screenshot of the current version of the game, showcasing improved visuals and a much smarter AI." onclick="openLightbox(this.src);">
+                    <img src="../media/game_current_version.png" alt="A screenshot of the current version of the game, showcasing improved visuals and a much smarter AI." onclick="openLightbox(this.src);">
                 </div>
             </article>
 
