--- a/html/team.html
+++ b/html/team.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/teampage.css">
-    <link rel="icon" href="/media/tab_icon.ico" type="image/x-icon">
+    <link rel="icon" href="../media/tab_icon.ico" type="image/x-icon">
     <title>Quoridor</title>
 </head>
 <body>
